probe_decls.txt
probe_time_decls.zig:3:5: error: found compile log statement
    @compileLog(std.meta.declarations(std.time));
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    callMain [inlined]: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\start.zig:679:59
    WinStartup: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\start.zig:479:53
    2 reference(s) hidden; use '-freference-trace=4' to see all references

Compile Log Output:
@as([]const builtin.Type.Declaration, [runtime value])
